--- a/back/package.json
+++ b/back/package.json
@@ -32,6 +32,8 @@
   "devDependencies": {
     "chai": "^5.2.0",
     "mocha": "^11.1.0",
-    "nyc": "^17.1.0"
+    "nyc": "^17.1.0",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   }
 }
