--- a/back/package.json
+++ b/back/package.json
@@ -30,6 +30,7 @@
     "nodemon": "^3.1.3"
   },
   "devDependencies": {
+    "babel-loader": "^9.2.1",
     "chai": "^5.2.0",
     "mocha": "^11.1.0",
     "nyc": "^17.1.0",
