--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,6 +19,18 @@ pipeline {
                 }
             }
         }
+
+        stage('SonarQube Analysis') {
+            steps{
+            script {
+        def scannerHome = tool 'scanner'
+        withSonarQubeEnv {
+        sh "${scannerHome}/bin/sonar-scanner"
+        }
+    }
+        }
+    }
+    
         stage('Build application') {
             steps {
                      dir('back') {
