--- a/back/package.json
+++ b/back/package.json
@@ -4,9 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js",
     "test": "mocha",
-    "test:coverage": "nyc --reporter=lcov npm test",
     "build-dev": "webpack --config webpack.dev.js --mode development"
   },
   "dependencies": {
@@ -18,16 +16,18 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
-    "express": "~4.16.1",
+    "express": "^4.21.2",
     "express-session": "^1.18.0",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^1.9.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.13.1",
     "mongoose": "^8.4.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "npm": "^11.1.0"
   },
   "devDependencies": {
     "babel-loader": "^9.2.1",
