Mise à jour des dépendances dans package.json

--- a/back/package.json
+++ b/back/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node app.js",
     "test": "mocha",
+    "test:coverage": "nyc --reporter=lcov npm test",
     "build-dev": "webpack --config webpack.dev.js --mode development"
   },
   "dependencies": {
