--- a/back/package.json
+++ b/back/package.json
@@ -33,7 +33,9 @@
   "devDependencies": {
     "babel-loader": "^9.2.1",
     "chai": "^5.2.0",
+    "html-loader": "^5.1.0",
     "mocha": "^11.1.0",
+    "mock-aws-s3": "^4.0.2",
     "nyc": "^17.1.0",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1"
