--- a/back/package.json
+++ b/back/package.json
@@ -4,9 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "test": "mocha",
-    "test:coverage": "nyc --reporter=lcov npm test",
-    "build-dev": "webpack --config webpack.dev.js --mode development"
+    "dev": "nodemon app.js"
   },
   "dependencies": {
     "all": "^0.0.0",
@@ -16,28 +14,20 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.2",
-    "express-session": "^1.18.0",
+    "dotenv": "^16.4.7",
+    "express": "~4.16.1",
+    "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
     "http-errors": "~1.6.3",
-    "jade": "^1.9.2",
+    "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.13.1",
+    "moment": "^2.30.1",
     "mongoose": "^8.4.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.3",
-    "npm": "^11.1.0"
-  },
-  "devDependencies": {
-    "babel-loader": "^9.2.1",
-    "chai": "^5.2.0",
-    "html-loader": "^5.1.0",
-    "mocha": "^11.1.0",
-    "mock-aws-s3": "^4.0.2",
-    "nyc": "^17.1.0",
-    "webpack": "^5.98.0",
-    "webpack-cli": "^6.0.1"
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
